# multi_restaurant_alx_captsone

./: .gitignore  Multi Restaurant ALX Capstone API.yaml  README.md  db.sqlite3  manage.py  multi_restaurant_alx_capstonse.http  pyproject.toml
carts/: models.py  serializers.py  urls.py  views.py
carts/migrations/: 0001_initial.py  0002_alter_cart_total_price.py  0003_cart_menu_cart_quantity_alter_cart_total_price_and_more.py
multi_restaurant_alx_captsone/: asgi.py  settings.py  urls.py  wsgi.py
orders/: models.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py
restaurants/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
restaurants/migrations/: 0001_initial.py  0002_alter_menu_restaurant.py  0003_menu_quantity.py
users/: managers.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_userprofile_user.py
